Fixed overflow problem for small size laptops

--- a/css/home.css
+++ b/css/home.css
@@ -94,12 +94,15 @@ body.home main section .content {
     top: 50%;
     left: 20%;
     transform: translate(0%, -50%);
-    height: 50%;
     color: var(--dark);
+    max-height: 75%;
     width: 35%;
+    overflow-y: auto;
 }
 
 body.home main section .content h1 {
+    padding-top: 0;
+    margin-top: 0;
     font-size: 5rem;
 }
 
